More notes